--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -67,31 +67,27 @@
                     </div>
                     <div class="tab-contants active-tab" id="skills">
                         <ul>
-                            <li><span>📌 Technical knowledge</span><br>    
-                                • Project Management • Operation • Maintenance • Design and Drafting 
-                                • Power Systems & Protection • Electrical load calculations • Industry Codes & Regulations 
-                                • Electrical Safety Standards Project Documentation & Reporting • BOP & BOQ • MEP • HVAC system 
-                                • Agile • Autocad, ETap, Altium • Data Structute and Algorithm • Operating System 
-                                • Computer Network & Security • Business and Product Understanding • Embedded Systems and IOT  
+                            <li><span>📌 Technical knowledge</span><br>
+                                • Project Management • Operation and Maintenance • Design and Drafting
+                                • Power Systems & Protection • Electrical load calculations • Industry Codes & Regulations
+                                • Electrical Safety Standards, Project Documentation & Reporting • BOP & BOQ • MEP • HVAC system
+                                • Agile • Autocad Design, ETap, Altium • Data Structute and Algorithm • Operating System
+                                • Computer Network & Security • Business and Product Understanding • Embedded Systems and IOT
 
                             </li>
                             <li><span>♦️ Tools Knowledge</span>
-                                <br>※ Design and Simulation: AutoCAD – 2D and 3D, ETAP, MATLAB, PLC/SCADA, Altium, Revit MEP, Navisworks, Compliance, CRM & ERP Software
-                                <br>※ Programming Language : Java, Python, Web Technologies: Web page Design using - HTML, CSS, JavaScript (ES6+), Bootstrap, React, PHP, JSON, MERN Stack
-                                <br>※ Data Analysis and Viasualization: Excel, Microsoft Power BI, Tableau, Oracle SQL, MySQL, R, MongoDB                        
-                                <br>※ Office Tools: Microsoft Office 365, SharePoint, MS Office, MS Excel, MS PowerPoint, SAP, VS Code, Eclipse, Git/GitHub 
+                                <br>※ Design and Simulation: AutoCAD, ETAP, PLC/SCADA, Altium, Revit MEP, Navisworks, CRM & ERP Software
+                                <br>※ Programming Language : Java, Python, HTML/CSS/JS
+                                <br>※ Data Analysis and Viasualization: Advance Excel, Microsoft Power BI, Tableau, Oracle SQL, MySQL, R, MongoDB
+                                <br>※ Office Tools: Microsoft Office 365 (MS Office, MS Excel, MS PowerPoint), SharePoint, SAP
  
                             </li>
 <!----------------
                             <li><span>♦️ Graphics Design</span>
-                                <br>※ Packaging Design (Labels, Merchandise Design), Flyers, Brochures (tri-fold, bi-fold, etc.), Posters, Postcards, Magazines, Books and Book Covers 
-                                <br>※ Marketing and Advertising (Social Media Graphics, Web Banners, Infographics, Email Templates, Presentation Design (e.g., PowerPoint, Keynote), 
-                                Billboards);
-                                <br>※ Branding and Identity Design: Logo Design, Brand Guidelines, Stationery Design (e.g., business cards, letterheads, envelopes), Corporate Identity (e.g., brand kits, packaging)
-                                <br>※ Digital and Web Design (Website Mockups and Templates, App Interfaces (UI/UX), Icons and Buttons, Digital Ads, Ebooks and PDFs)
+                                <br>※ Packaging Design (Labels, Merchandise Design), Flyers, Brochures (tri-fold, bi-fold, etc.), Posters, Postcards, Magazines, Books and Book Covers
                             </li>
 ---------------->
-                            <li><span>♦️ Soft Skills</span><br>Agile Methodology, Project Management, Teamwork, Attention to Detail, Communication, Analytical & critical Thinking, Problem-solving, Team 
+                            <li><span>♦️ Soft Skills</span><br>Agile Methodology, Project Management, Leadership, Attention to Detail, Communication, Analytical & critical Thinking, Problem-solving, Team
                                 Work, Adoptability
                             </li>
                         </ul>
