--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -147,57 +147,64 @@
             <div class="services-list">
                 <div>
                     <i class="fa-solid fa-code"></i>
-                    <h2>Engineering design</h2>
-                    <p>Freelancing
+                    <h2>Engineering</h2>
+                    <p>Offering innovative engineering solutions with a focus on technical design, system optimization, and project development.
                         <!----------------
-                        Graphics design - Logo Design, Brand Identity design, Marketing Materials, Web and App Design layouts and user interfaces (UI/UX), Social Media Design,Packaging Design, Illustrations, Print Design <br>
-                        Copy Writing - Creative Writing, Email Marketing, Social Media Copy, SEO Copywriting, Script Writing
+Services Offered:
+CAD design and drafting (AutoCAD, SolidWorks)
+Mechanical/electrical systems design
+Product development and prototyping
+Technical documentation and compliance review
+Engineering calculations and simulations (FEA, CFD)
+Project planning and lifecycle support
                         ---------------->
                     </p>
                     <a href="#">Learn more</a>
                 </div>
                 <div>
                     <i class="fa-brands fa-uncharted"></i>
-                    <h2>Virtual Assustant (VA)</h2>
-                    <p>
-                        <!---------------- 
-                        Provide administrative, technical or creative support to business, entrepreneurs or professionals.<br>
-                        Administrative support - Managing emails, scheduling appointments, handling consumer inquiries. <br>
-                        Social media management - Creating posts, responding to messages and growing online presence. <br>
-                        Data entry and research - Collecting and organizing information for businesses. <br>
-                        Ecommerce support - Managing online stores, processing orders, or handling customer service. <br>
-                        Content writing - writing blog posts, product descriptions, or newsletters. <br>
-                        Bookkeeping - Tracking expenses, invoicing clients, and handling financial records. 
+                    <h2>Cyber Security Analyst</h2>
+                    <p> Helping organizations stay secure with comprehensive cyber threat analysis, system audits, and proactive defense strategies.
+                        <!----------------
+Services Offered:
+Vulnerability assessment and penetration testing
+Security information and event management (SIEM) monitoring
+Risk analysis and mitigation planning
+Network security configuration and audits
+Incident response and digital forensics
+Compliance checks (ISO 27001, NIST, GDPR)
                         ---------------->
                     </p>
                     <a href="#">Learn more</a>
                 </div>
                 <div>
                     <i class="fa-solid fa-crop-simple"></i>
-                    <h2>Web Development</h2>
-                    <p>
-                        <!----------------
-                        Full-Stack Development, Website Maintenance, Custom Web Applications, Dashboard Design
-                    ---------------->
+                    <h2>Data Analysis</h2>
+                    <p>Turning raw data into clear, actionable insights that drive better decision-making and performance improvement.
+<!----------------
+Services Offered:
+Data cleaning and transformation
+Exploratory data analysis (EDA)
+Statistical modeling and forecasting
+Data visualization (Power BI, Tableau, Python/Matplotlib)
+Dashboard creation and automation
+Business intelligence reporting
+---------------->
                     </p>
                     <a href="#">Learn more</a>
                 </div>
                 <div>
                     <i class="fa-brands fa-app-store"></i>
-                    <h2>Data Analist</h2>
-                    <p> Data Analysis and Visualization, Dashboard Creation
+                    <h2>Virtual Assistant</h2>
+                    <p> Providing reliable, detail-oriented virtual support to keep operations smooth and efficient.
                         <!----------------
-                        Data Cleaning and preprocessing,
-                        Data Visualization, Exploratory data analysis, machine learning models, 
-                        web scrapping and data extraction, database management, financial and business analysis,
-                        Data Modeling and Forecasting, , Database management, Data Modeling and Forecasting, Statistical Analysis
-                        Statistical Analysis,
-                        Business Intelligence (BI),
-                        Market Research and Insights,
-                        Dashboard Creation
-                        SQL Query Optimization,
-                        Web Analytics,
-                        Data Automation
+                        Services Offered:
+Calendar and email management
+Data entry and CRM management
+Research and report preparation
+Customer support and communication handling
+Social media scheduling and management
+Document formatting and transcription
                         ---------------->
                     </p>
                     <a href="#">Learn more</a>
