--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -225,7 +225,7 @@ Document formatting and transcription
                     <div class="layer">
                         <h3>Smart Energy Management System with IoT, AI, and Renewable Integration</h3>
                         <p>Project 1</p>
-                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://github.com/tapashsutradhar/tapashsutradhar/tree/main/Projects"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -233,7 +233,7 @@ Document formatting and transcription
                     <div class="layer">
                         <h3>IoT-Based Smart Home Automation and Monitoring System</h3>
                         <p>Project 2</p>
-                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://github.com/tapashsutradhar/tapashsutradhar/tree/main/Projects"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -241,7 +241,7 @@ Document formatting and transcription
                     <div class="layer">
                         <h3>Employee Management System</h3>
                         <p>The Software connects to Employes with there Company and Employes can See all details.</p>
-                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://github.com/tapashsutradhar/tapashsutradhar/tree/main/Projects"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
     <!-----------
@@ -267,11 +267,11 @@ Document formatting and transcription
                     <div class="layer">
                         <h3>Real-Time Stock Market Analysis</h3>
                         <p>Built a real-time stock tracking and analysis system with a team.</p>
-                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://github.com/tapashsutradhar/tapashsutradhar/tree/main/Projects"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
             </div>
-            <a href="#" class="btn">See more</a>
+            <a href="work" class="btn">See more</a>
         </div>
     </div>
     <!---------------------------Contact-------------------------->
