--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -281,7 +281,7 @@ Document formatting and transcription
                 <div class="contact-left">
                     <h1 class="sub-title">Contact Me</h1>
                     <p><i class="fa-solid fa-envelope"></i> sutradhartapashapd@gmail.com </p>
-                    <p><i class="fa-solid fa-square-phone"></i> +91  </p>
+                    <p><i class="fa-solid fa-square-phone"></i> +91 7001849383 </p>
                     <div class="social-icon">
                         <a href="https://in.linkedin.com/in/tapashsutradhar/" target="_blank"><i class="fab fa-linkedin"></i></a>
                         <a href="https://github.com/tapashsutradhar" target="_blank"><i class="fab fa-github"></i></a>
@@ -289,8 +289,8 @@ Document formatting and transcription
                         <a href="https://medium.com/@itapashsutradhar" target="_blank"><i class="fab fa-medium"></i></a>
                         <a href="https://www.behance.net/itapashsutradhar" target="_blank"><i class="fab fa-behance"></i></a>
                         <a href="https://dribbble.com/tapashsutradhar" target="_blank"><i class="fab fa-square-dribbble"></i></a>
-                        <!-----------         
-                        <a href="https://www.instagram.com/imtapashsutradhar/" target="_blank"><i class="fab fa-square-instagram"></i></a>               
+                        <!-----------
+                        <a href="https://www.instagram.com/imtapashsutradhar/" target="_blank"><i class="fab fa-square-instagram"></i></a>
                         <a href="https://www.facebook.com/itapashsutradhar" target="_blank"><i class="fab fa-facebook"></i></a>
                         <a href="http://youtube.com/@imtapashsutradhar" target="_blank"><i class="fab fa-youtube"></i></a>
                         ------------>
