--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -263,7 +263,7 @@ Document formatting and transcription
                     </div>
                 </div>
             </div>
-            <a href="work" class="btn">See more</a>
+            <a href="#work" class="btn">See more</a>
         </div>
     </div>
     <!---------------------------Contact-------------------------->
