--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -159,7 +159,7 @@ Engineering calculations and simulations (FEA, CFD)
 Project planning and lifecycle support
                         ---------------->
                     </p>
-                    <a href="#">Learn more</a>
+                    <a href="#services">Learn more</a>
                 </div>
                 <div>
                     <i class="fa-brands fa-uncharted"></i>
@@ -175,7 +175,7 @@ Incident response and digital forensics
 Compliance checks (ISO 27001, NIST, GDPR)
                         ---------------->
                     </p>
-                    <a href="#">Learn more</a>
+                    <a href="#services">Learn more</a>
                 </div>
                 <div>
                     <i class="fa-solid fa-crop-simple"></i>
@@ -191,7 +191,7 @@ Dashboard creation and automation
 Business intelligence reporting
 ---------------->
                     </p>
-                    <a href="#">Learn more</a>
+                    <a href="#services">Learn more</a>
                 </div>
                 <div>
                     <i class="fa-brands fa-app-store"></i>
@@ -207,7 +207,7 @@ Social media scheduling and management
 Document formatting and transcription
                         ---------------->
                     </p>
-                    <a href="#">Learn more</a>
+                    <a href="#services">Learn more</a>
                 </div>
             </div>
         </div>
