--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -275,7 +275,7 @@ Document formatting and transcription
                     <p><i class="fa-solid fa-envelope"></i> </p>
                     <p><i class="fa-solid fa-square-phone"></i>  </p>
                     <div class="social-icon">
-                        <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/tapashsutradhar/" target="_blank"><i class="fab fa-linkedin"></i></a>
                         <a href="#" target="_blank"><i class="fab fa-github"></i></a>
                         <a href="#" target="_blank"><i class="fab fa-twitter-square"></i></a>
                         <a href="#" target="_blank"><i class="fab fa-medium"></i></a>
