--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -225,7 +225,7 @@ Document formatting and transcription
                     <div class="layer">
                         <h3>Smart Energy Management System with IoT, AI, and Renewable Integration</h3>
                         <p>Project 1</p>
-                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://github.com/tapashsutradhar/tapashsutradhar/tree/main/Projects"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -233,7 +233,7 @@ Document formatting and transcription
                     <div class="layer">
                         <h3>IoT-Based Smart Home Automation and Monitoring System</h3>
                         <p>Project 2</p>
-                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://github.com/tapashsutradhar/tapashsutradhar/tree/main/Projects"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
     <!-----------
@@ -259,7 +259,7 @@ Document formatting and transcription
                     <div class="layer">
                         <h3>Real-Time Stock Market Analysis</h3>
                         <p>Built a real-time stock tracking and analysis system with a team.</p>
-                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://github.com/tapashsutradhar/tapashsutradhar/tree/main/Projects"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
             </div>
@@ -272,15 +272,21 @@ Document formatting and transcription
             <div class="row">
                 <div class="contact-left">
                     <h1 class="sub-title">Contact Me</h1>
-                    <p><i class="fa-solid fa-envelope"></i> </p>
-                    <p><i class="fa-solid fa-square-phone"></i>  </p>
+                    <p><i class="fa-solid fa-envelope"></i> tsdmail4@gmail.com </p>
+                    <p><i class="fa-solid fa-square-phone"></i> +91  </p>
                     <div class="social-icon">
-                        <a href="https://www.linkedin.com/in/tapashsutradhar/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-                        <a href="#" target="_blank"><i class="fab fa-twitter-square"></i></a>
-                        <a href="#" target="_blank"><i class="fab fa-medium"></i></a>
+                        <a href="https://in.linkedin.com/in/tapashsutradhar/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://github.com/tapashsutradhar" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="https://twitter.com/im_Tapash" target="_blank"><i class="fab fa-twitter-square"></i></a>
+                        <a href="https://medium.com/@itapashsutradhar" target="_blank"><i class="fab fa-medium"></i></a>
 
-
+<!-----------
+                        <a href="https://www.behance.net/itapashsutradhar" target="_blank"><i class="fab fa-behance"></i></a>
+                        <a href="https://dribbble.com/tapashsutradhar" target="_blank"><i class="fab fa-square-dribbble"></i></a>
+                        <a href="https://www.instagram.com/imtapashsutradhar/" target="_blank"><i class="fab fa-square-instagram"></i></a>
+                        <a href="https://www.facebook.com/itapashsutradhar" target="_blank"><i class="fab fa-facebook"></i></a>
+                        <a href="http://youtube.com/@imtapashsutradhar" target="_blank"><i class="fab fa-youtube"></i></a>
+                        ------------>
                     </div>
                     <!------------------CV File----------------------->
                     <a href="assets/Tapash Sutradhar.pdf" download class="btn btn2">Download CV</a>
