--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p>※ Hi! I’m Tapash,<br><br>
+                    <p>Hi! I’m Tapash,<br>
 
                         Aspiring Data Analyst with a strong engineering foundation and hands-on experience in Python, SQL, and BI tools.
                         Skilled at analyzing and visualizing large datasets to deliver actionable insights that support data-driven business
@@ -68,54 +68,33 @@
                     </div>
                     <div class="tab-contants active-tab" id="skills">
                         <ul>
-                            <li><span>📌 Technical knowledge</span><br>
-                                • Project Management • Operation and Maintenance • Design and Drafting
-                                • Power Systems & Protection • Electrical load calculations • Industry Codes & Regulations
-                                • Electrical Safety Standards, Project Documentation & Reporting • BOP & BOQ • MEP • HVAC system
-                                • Agile • Autocad Design, ETap, Altium • Data Structute and Algorithm • Operating System
-                                • Computer Network & Security • Business and Product Understanding • Embedded Systems and IOT
+                            <li><span>🟡 Technical knowledge</span><br>
+                                ✔ Software Development & Data Analysis <br>
+✔ Programming Language: Java, Python, R, HTML/CSS, JS, JSON, MERN <br>
+✔ Data Cleaning & Preparation (Python, Excel, SQL) <br>
+✔ Data Visualization (Tableau, Power BI, Matplotlib) <br>
+✔ Python Libraries (Pandas, Seaborn, NumPy, Matplotlib) <br>
+✔ Business Insights, Data storytelling & Reporting <br>
+✔ Statistical Analysis & Forecasting <br>
+                            </li>
+                            <li><span>🟡 Tools Knowledge</span>
+                                <br>※ Design and Simulation: 
+                            </li>
 
-                            </li>
-                            <li><span>♦️ Tools Knowledge</span>
-                                <br>※ Design and Simulation: AutoCAD, ETAP, PLC/SCADA, Altium, Revit MEP, Navisworks, CRM & ERP Software
-                                <br>※ Programming Language : Java, Python, HTML/CSS/JS
-                                <br>※ Data Analysis and Viasualization: Advance Excel, Microsoft Power BI, Tableau, Oracle SQL, MySQL, R, MongoDB
-                                <br>※ Office Tools: Microsoft Office 365 (MS Office, MS Excel, MS PowerPoint), SharePoint, SAP
-                            </li>
-<!----------------
-                            <li><span>♦️ Graphics Design</span>
-                                <br>※ Packaging Design (Labels, Merchandise Design), Flyers, Brochures (tri-fold, bi-fold, etc.), Posters, Postcards, Magazines, Books and Book Covers
-                            </li>
----------------->
-                            <li><span>♦️ Soft Skills</span><br>Agile Methodology, Project Management, Leadership, Attention to Detail, Communication, Analytical & critical Thinking, Problem-solving, Team
-                                Work, Adoptability
+                            <li><span>🟡 Soft Skills</span><br> Communication, Attention to Detail, Analytical & critical Thinking, Problem-solving
                             </li>
                         </ul>
                     </div>
                     <div class="tab-contants" id="experience">
                         <ul>
-                            <li><span>Graduate Engineer Trainee</span>
-                                <br>WBSETCL | West Bengal, India <br>
-                                  July 2024 – Present <br>
-                                  Key Responsibilities & Achievements: <br>
-                                  •	Optimized Power Grid Efficiency: Achieved a 2-3% reduction in transmission losses. Implemented improved load flow analysis, reactive power compensation, and optimized switching strategies in 220kV and 132kV AIS & GIS substations. <br>
-                                  •	Enhanced Substation Reliability: Cut fault response time through predictive maintenance and real-time monitoring. <br>
-                                  •	Improved Testing & Commissioning: Reduced testing time using advanced diagnostic tools (IR Thermography, DGA, CT/PT testing). <br>
-                                  •	Cost Reduction: Saved 10-15% in maintenance costs by implementing condition-based maintenance (CBM). <br>
-                                  •	Efficient Substation Design: Increased space utilization using AutoCAD-based layout optimization.<br>
+                            <li><span>Data Analyst Intern</span>
+                                <br>InnoByte Services, new Delhi<br>
+                                  July 2025 – Present <br>
+                                  
                             </li>
-                            <li><span>Executive Engineer</span>
-                                  <br>Utility and Maintenance, Design & Project<br>
-                                  Synnat Pharma Pvt. Ltd  | Visakhpattanam, India <br>
-                                  May 2023 – July 2024 <br>
-                                  Key Responsibilities & Achievements: <br>
-                                  •	Improved System Reliability: Reduced electrical downtime by 25% with preventive maintenance and equipment upgrades.<br>
-                                  •	Energy Efficiency Gains: Cut energy consumption through power audits and automation (PLC/SCADA). <br>
-                                  •	Optimized Project Execution: Reduced execution time by 15% with SOPs and workflow optimization. <br>
-                                  •	Automation Implementation: Increased process efficiency via PLC/SCADA-based automation. <br>
-                                  •	Enhanced Electrical & MEP Design: Improved accuracy by 30% using AutoCAD & ETAP for system modeling. <br>
-                                  •	HVAC System Maintenance & Upgradation: Enhanced HVAC performance and energy efficiency through system diagnostics, maintenance, and upgrades. <br>
-
+                            <li><span>Software developer and Data Analyst</span>
+                                  <br>Zidio Development Ltd, Bangalore<br>
+                                  March 2024 – Aug 2025 <br>
                             </li>
 
 
@@ -126,14 +105,10 @@
                     </div>
                     <div class="tab-contants" id="education">
                         <ul>
-                            <li><span>B-Tech ~ 2023</span><br>
-                                Bengal Institute of Technology and Management (BITM), Santinikatan, WB, India<br>
+                            <li><span>Engineering ~ 2023</span><br>
+                                Bengal Institute of Technology and Management (BITM),India<br>
                                 Bachelor of Technology<br>
                                 CGPA 9.17 <br></li>
-                            <li><span>Diploma ~ 2019</span><br>
-                                Nibedita Poplytechnic (WBSCTE & AICTE), Barhampur, WB, India<br>
-                                Diploma in Engineering<br> 
-                                CGPA 8.5 <br></li>
                         </ul>
                     </div>
                 </div>
@@ -147,75 +122,40 @@
             <div class="services-list">
                 <div>
                     <i class="fa-solid fa-code"></i>
-                    <h2>Engineering</h2>
-                    <p>Offering innovative engineering solutions with a focus on technical design, system optimization, and project development.
-                        <!----------------
-Services Offered:
-CAD design and drafting (AutoCAD, SolidWorks)
-Mechanical/electrical systems design
-Product development and prototyping
-Technical documentation and compliance review
-Engineering calculations and simulations (FEA, CFD)
-Project planning and lifecycle support
-                        ---------------->
+                    <h2>Data Analysis</h2>
+                    <p>
+                        Turning raw data into clear, actionable insights that drive better decision-making and performance improvement.
                     </p>
                     <a href="#services">Learn more</a>
                 </div>
                 <div>
                     <i class="fa-brands fa-uncharted"></i>
                     <h2>Cyber Security Analyst</h2>
-                    <p> Helping organizations stay secure with comprehensive cyber threat analysis, system audits, and proactive defense strategies.
-                        <!----------------
-Services Offered:
-Vulnerability assessment and penetration testing
-Security information and event management (SIEM) monitoring
-Risk analysis and mitigation planning
-Network security configuration and audits
-Incident response and digital forensics
-Compliance checks (ISO 27001, NIST, GDPR)
-                        ---------------->
+                    <p>
+                        Helping organizations stay secure with comprehensive cyber threat analysis, system audits, and proactive defense strategies.
                     </p>
                     <a href="#services">Learn more</a>
                 </div>
                 <div>
                     <i class="fa-solid fa-crop-simple"></i>
-                    <h2>Data Analysis</h2>
-                    <p>Turning raw data into clear, actionable insights that drive better decision-making and performance improvement.
-<!----------------
-Services Offered:
-Data cleaning and transformation
-Exploratory data analysis (EDA)
-Statistical modeling and forecasting
-Data visualization (Power BI, Tableau, Python/Matplotlib)
-Dashboard creation and automation
-Business intelligence reporting
----------------->
+                    <h2>AI Engineer & Software Development</h2>
+                    <p>
+                        Offering innovative engineering solutions with a focus on technical design, system optimization, and project development.
                     </p>
                     <a href="#services">Learn more</a>
                 </div>
                 <div>
                     <i class="fa-brands fa-app-store"></i>
                     <h2>Virtual Assistant</h2>
-                    <p> Providing reliable, detail-oriented virtual support to keep operations smooth and efficient.
-                        <!----------------
-                        Services Offered:
-Calendar and email management
-Data entry and CRM management
-Research and report preparation
-Customer support and communication handling
-Social media scheduling and management
-Document formatting and transcription
-                        ---------------->
+                    <p>
+                        Providing reliable, detail-oriented virtual support to keep operations smooth and efficient.
                     </p>
                     <a href="#services">Learn more</a>
                 </div>
             </div>
         </div>
     </div>
-
-
-
-    <!---------------------------Work-------------------------->
+<!---------------------------Work-------------------------->
     <div id="work">
         <div class="container">
             <h1 class="sub-title">My Work</h1>
@@ -225,7 +165,7 @@ Document formatting and transcription
                     <div class="layer">
                         <h3>Smart Energy Management System with IoT, AI, and Renewable Integration</h3>
                         <p>Project 1</p>
-                        <a href="https://github.com/tapashsutradhar/tapashsutradhar/tree/main/Projects"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://github.com/tapashsutradhar"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -233,33 +173,15 @@ Document formatting and transcription
                     <div class="layer">
                         <h3>IoT-Based Smart Home Automation and Monitoring System</h3>
                         <p>Project 2</p>
-                        <a href="https://github.com/tapashsutradhar/tapashsutradhar/tree/main/Projects"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://github.com/tapashsutradhar"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
-    <!-----------
-                <div class="work">
-                    <img src="assets/work-1.png" alt="">
-                    <div class="layer">
-                        <h3>Job Listing Portal</h3>
-                        <p>Project.</p>
-                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
-                    </div>
-                </div>
-                <div class="work">
-                    <img src="assets/work-2.png" alt="">
-                    <div class="layer">
-                        <h3>Result Management and Certificate Verification Application</h3>
-                        <p>Automated result processing and certificate verification</p>
-                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
-                    </div>
-                </div>
-    ------------>
                 <div class="work">
                     <img src="assets/work-3.png" alt="">
                     <div class="layer">
                         <h3>Real-Time Stock Market Analysis</h3>
                         <p>Built a real-time stock tracking and analysis system with a team.</p>
-                        <a href="https://github.com/tapashsutradhar/tapashsutradhar/tree/main/Projects"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://github.com/tapashsutradhar"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
             </div>
@@ -272,8 +194,8 @@ Document formatting and transcription
             <div class="row">
                 <div class="contact-left">
                     <h1 class="sub-title">Contact Me</h1>
-                    <p><i class="fa-solid fa-envelope"></i> tsdmail4@gmail.com </p>
-                    <p><i class="fa-solid fa-square-phone"></i> +91  </p>
+                    <p><i class="fa-solid fa-envelope"></i> user@domainname.com </p>
+                    <p><i class="fa-solid fa-square-phone"></i> +1 101 001 1010  </p>
                     <div class="social-icon">
                         <a href="https://in.linkedin.com/in/tapashsutradhar/" target="_blank"><i class="fab fa-linkedin"></i></a>
                         <a href="https://github.com/tapashsutradhar" target="_blank"><i class="fab fa-github"></i></a>
@@ -307,7 +229,7 @@ Document formatting and transcription
         </div>
         <!------------------Copyright----------------------->
         <div class="copyright">
-            <p> © Copyright Made by Tapash Sutradhar 2025 · All rights reserved</p>
+            <p> Copyright ©2025 | All rights reserved </p>
         </div>
     </div>
     <!------------------JS Script----------------------->
