--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -36,7 +36,6 @@
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
-                
                 <h1 class="heading-2">Hello! <span class="wave">👋🏼</span><br /> I'm <span>Tapash Sutradhar</span> 
                     <br>  </h1>
                 <p class="heading-1"> Data Analyst & Software Developer </p>
@@ -89,12 +88,11 @@
                         <ul>
                             <li><span>Data Analyst Intern</span>
                                 <br>InnoByte Services, new Delhi<br>
-                                  July 2025 – Present <br>
-                                  
+                                July 2025 – Present <br>
                             </li>
                             <li><span>Software developer and Data Analyst</span>
-                                  <br>Zidio Development Ltd, Bangalore<br>
-                                  March 2024 – Aug 2025 <br>
+                                <br>Zidio Development Ltd, Bangalore<br>
+                                March 2024 – Aug 2025 <br>
                             </li>
 
 
@@ -194,7 +192,7 @@
             <div class="row">
                 <div class="contact-left">
                     <h1 class="sub-title">Contact Me</h1>
-                    <p><i class="fa-solid fa-envelope"></i> user@domainname.com </p>
+                    <p><i class="fa-solid fa-envelope"></i> sutradhartapashapd@gmail.com </p>
                     <p><i class="fa-solid fa-square-phone"></i> +1 101 001 1010  </p>
                     <div class="social-icon">
                         <a href="https://in.linkedin.com/in/tapashsutradhar/" target="_blank"><i class="fab fa-linkedin"></i></a>
