--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -64,6 +64,7 @@
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('experience')">Experience</p>
                         <p class="tab-links" onclick="opentab('education')">Education</p>
+                        <p class="tab-links" onclick="opentab('certification')">Certification</p>
                     </div>
                     <div class="tab-contants active-tab" id="skills">
                         <ul>
@@ -77,7 +78,7 @@
 ✔ Statistical Analysis & Forecasting <br>
                             </li>
                             <li><span>🟡 Tools Knowledge</span>
-                                <br>※ Design and Simulation: 
+                                <br>※ VS Code, Eclipse, Git/GitHUB, Oracle 11g
                             </li>
 
                             <li><span>🟡 Soft Skills</span><br> Communication, Attention to Detail, Analytical & critical Thinking, Problem-solving
@@ -94,10 +95,6 @@
                                 <br>Zidio Development Ltd, Bangalore<br>
                                 March 2024 – Aug 2025 <br>
                             </li>
-
-
-
-
                             <li><span></span><br></li>
                         </ul>
                     </div>
@@ -105,8 +102,30 @@
                         <ul>
                             <li><span>Engineering ~ 2023</span><br>
                                 Bengal Institute of Technology and Management (BITM),India<br>
-                                Bachelor of Technology<br>
+                                Bachelor of Technology in Electrical Engineering<br>
                                 CGPA 9.17 <br></li>
+                        </ul>
+                    </div>
+                    <div class="tab-contants" id="certification">
+                        <ul>
+                            <li><span>Google Data Analytics Profational Certifications</span>
+                                <br>Coursera<br>
+                            </li>
+                            <li><span>Google Advance Data Analytics Certifications</span>
+                                <br>Coursera<br>
+                            </li>
+                            <li><span>IBM Data Analyst Certification</span>
+                                <br>Coursera<br>
+                            </li>
+                            <li><span>Python A to Z</span>
+                                <br>Udemy<br>
+                            </li>
+                            <li><span>AI & Machine Learning</span>
+                                <br>Andrew Ng - Deeplearning Ai<br>
+                            </li>
+                            <li><span>Software Development and Testing</span>
+                                <br>Coursera / Udemy / J Spider training center<br>
+                            </li>
                         </ul>
                     </div>
                 </div>
