--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -163,9 +163,9 @@
                 </div>
                 <div>
                     <i class="fa-brands fa-app-store"></i>
-                    <h2>Virtual Assistant</h2>
+                    <h2>Graphics Design</h2>
                     <p>
-                        Providing reliable, detail-oriented virtual support to keep operations smooth and efficient.
+                        Providing Design according business needed UI/UX, Ad, Flex, Printmedia, Banner etc.
                     </p>
                     <a href="#services">Learn more</a>
                 </div>
@@ -202,7 +202,7 @@
                     </div>
                 </div>
             </div>
-            <a href="#work" class="btn">See more</a>
+            <a href="https://github.com/tapashsutradhar" class="btn">See more</a>
         </div>
     </div>
     <!---------------------------Contact-------------------------->
