--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -70,18 +70,18 @@
                         <ul>
                             <li><span>🟡 Technical knowledge</span><br>
                                 ✔ Software Development & Data Analysis <br>
-✔ Programming Language: Java, Python, R, HTML/CSS, JS, JSON, MERN <br>
-✔ Data Cleaning & Preparation (Python, Excel, SQL) <br>
-✔ Data Visualization (Tableau, Power BI, Matplotlib) <br>
-✔ Python Libraries (Pandas, Seaborn, NumPy, Matplotlib) <br>
-✔ Business Insights, Data storytelling & Reporting <br>
-✔ Statistical Analysis & Forecasting <br>
+                                ✔ Programming Language: Java, Python, R, HTML/CSS, JS, JSON, MERN <br>
+                                ✔ Data Cleaning & Preparation (Python, Excel -Pivot, Macro, SQL) <br>
+                                ✔ Data Visualization (Tableau, Power BI, Matplotlib) <br>
+                                ✔ Python Libraries (Pandas, Seaborn, NumPy, Matplotlib) <br>
+                                ✔ Business Insights, Data storytelling & Reporting <br>
+                                ✔ Statistical Analysis & Forecasting <br>
                             </li>
                             <li><span>🟡 Tools Knowledge</span>
-                                <br>※ VS Code, Eclipse, Git/GitHUB, Oracle 11g
+                                <br>※ VS Code, Eclipse, Git/GitHUB, Oracle 11g, Microsoft Office
                             </li>
 
-                            <li><span>🟡 Soft Skills</span><br> Communication, Attention to Detail, Analytical & critical Thinking, Problem-solving
+                            <li><span>🟡 Soft Skills</span><br> Communication, Attention to Detail, Analytical & critical Thinking, Problem-solving, Stakeholder Management, Business Stratigy, Business Intelligence, Product Analysis
                             </li>
                         </ul>
                     </div>
