--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -87,13 +87,17 @@
                     </div>
                     <div class="tab-contants" id="experience">
                         <ul>
+                            <li><span>Data Engineer</span>
+                                <br>WBSETCL<br>
+                                July 2024 – Present <br>
+                            </li>
                             <li><span>Data Analyst Intern</span>
                                 <br>InnoByte Services, new Delhi<br>
-                                July 2025 – Present <br>
+                                July 2025 – October 2025 <br>
                             </li>
                             <li><span>Software developer and Data Analyst</span>
                                 <br>Zidio Development Ltd, Bangalore<br>
-                                March 2024 – Aug 2025 <br>
+                                March 2024 – Sept 2024 <br>
                             </li>
                             <li><span></span><br></li>
                         </ul>
