--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -91,7 +91,7 @@
                                 <br>WBSETCL<br>
                                 July 2024 – Present <br>
                             </li>
-                            <li><span>Data Analyst Intern</span>
+                            <li><span>Data Analyst (Intern)</span>
                                 <br>InnoByte Services, new Delhi<br>
                                 July 2025 – October 2025 <br>
                             </li>
