--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -222,6 +222,7 @@
                         <a href="https://github.com/tapashsutradhar" target="_blank"><i class="fab fa-github"></i></a>
                         <a href="https://twitter.com/im_Tapash" target="_blank"><i class="fab fa-twitter-square"></i></a>
                         <a href="https://medium.com/@itapashsutradhar" target="_blank"><i class="fab fa-medium"></i></a>
+                        <a href="https://www.youtube.com/@imtapashsutradhar" target="_blank"><i class="fab fa-youtube"></i></a>
 
 <!-----------
                         <a href="https://www.behance.net/itapashsutradhar" target="_blank"><i class="fab fa-behance"></i></a>
