--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -239,7 +239,7 @@
                     <form name="submit-to-google-sheet">
                         <input type="text" name="Name" placeholder="Your Name" id="name" required>
                         <input type="text" name="Email" pattern="[^ @]*@[^ @]*" placeholder="Your Email" id="email" required>
-                        <textarea name="Message" rows="6" placeholder="Your Message" id="message"></textarea>
+                        <textarea name="Message" rows="6" placeholder="Your Message (You can send a message, This contact from is truely working)" id="message"></textarea>
                         <button type="submit" id="send" onclick="message()" class="btn btn2">Submit</button>
                     </form>
                     <span id="msg"></span>
