--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -38,7 +38,7 @@
             <div class="header-text">
                 <h1 class="heading-2">Hello! <span class="wave">👋🏼</span><br /> I'm <span>Tapash Sutradhar</span> 
                     <br>  </h1>
-                <p class="heading-1"> Data Analyst & Software Developer </p>
+                <p class="heading-1"> Electrical Engineer | Project Controls & Data Analytics | Python | Power BI  </p>
             </div>
         </div>
     </div>
@@ -52,11 +52,14 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p>Hi! I’m Tapash,<br>
+                    <p>Hi! I’m Tapash,<br><br>
 
-                        Aspiring Data Analyst with a strong engineering foundation and hands-on experience in Python, SQL, and BI tools.
+                        Results-oriented experienced Electrical Engineer with specializing in Projects, Engineering Design, Project 
+Controls, Technical Data Analysis and Business Intelligence. Skilled in optimizing electrical systems using AutoCAD, 
+ETAP, Python, Power BI and Advanced Excel. Seeking to leverage strong technical design and analytical skills to 
+deliver cost-effective engineering solutions. <br><br> Aspiring Data Analyst with a strong engineering foundation and hands-on experience in Python, SQL, and BI tools.
                         Skilled at analyzing and visualizing large datasets to deliver actionable insights that support data-driven business
-                        decisions. Eager to apply analytical, mathematical, and technical skills to solve real-world problems. <br><br>
+                        decisions. Eager to apply analytical, mathematical, and technical skills to solve real-world problems. <br><br><br>
 
                     </p>
                     <!------------------3 title section----------------------->
@@ -68,61 +71,92 @@
                     </div>
                     <div class="tab-contants active-tab" id="skills">
                         <ul>
-                            <li><span>🟡 Technical knowledge</span><br>
-                                ✔ Software Development & Data Analysis <br>
-                                ✔ Programming Language: Java, Python, R, HTML/CSS, JS, JSON, MERN <br>
-                                ✔ Data Cleaning & Preparation (Python, Excel -Pivot, Macro, SQL) <br>
-                                ✔ Data Visualization (Tableau, Power BI, Matplotlib) <br>
-                                ✔ Python Libraries (Pandas, Seaborn, NumPy, Matplotlib) <br>
+                            <li><span>🟡 Data Analytics & Programming</span><br>
+                                ✔ Electrical Engineering & Data Analysis <br>
+                                ✔ Programming Language: Java, Python, R, HTML/CSS, JS <br>
+                                ✔ SQL (MySQL, MongoDB, PostgreSQL)<br>
+                                ✔ Python (Pandas, Seaborn, NumPy, Matplotlib, SciPy, Time-Series)<br>
+                                ✔ Data Visualization: Power BI (DAX, Dashboards), Tableau (Story Points)<br>
+                                ✔ Advanced Excel (VLOOKUP, VBA, Macros, Power Pivot)<br>
+                                ✔ Tools: Jupyter Notebooks, Data Cleaning & Automation, DBT, ETL/ELT, Data Cleaning & Preparation, MS Office Suite (Word, Excel, PowerPoint), Data 
+                                    Analysis & Reporting<br>
                                 ✔ Business Insights, Data storytelling & Reporting <br>
                                 ✔ Statistical Analysis & Forecasting <br>
                             </li>
-                            <li><span>🟡 Tools Knowledge</span>
-                                <br>※ VS Code, Eclipse, Git/GitHUB, Oracle 11g, Microsoft Office
+                            <li><span>🟡 Electrical Engineering & Design</span><br>
+                                • Design & Drafting: AutoCAD, ETAP, Dialux, SolidWorks, SLD (Single Line Diagrams), Cable Sizing <br>
+                                • Systems: Electrical System Design (LV/MV), EHV/Substation Commissioning, Protection Studies, Load <br>
+                                Calculations, Testing & Commissioning, QA/QC & HSE Compliance (IEC, ISO, NEC, DEWA), Automation & Controls <br>
+                                • Automation: PLC/SCADA, Sensors, Actuators, VFDs, MATLAB.<br>
                             </li>
-
-                            <li><span>🟡 Soft Skills</span><br> Communication, Attention to Detail, Analytical & critical Thinking, Problem-solving, Stakeholder Management, Business Stratigy, Business Intelligence, Product Analysis
+                            <li><span>🟡 Project Management & Controls</span><br> 
+                                • Planning: Primavera P6, MS Project, SAP/ERP Systems, SharePoint. <br>
+                                • Commercial: Cost Control & Variance Analysis, BOQ (Bill of Quantities)/Cost Estimation, Variance Analysis, Vendor Management, 
+                                Project Documentation, Progress Reporting <br>
+                                • Execution: Site Coordination, Testing & Commissioning, MEP Coordination.<br>
+                                • Communication, Attention to Detail, Problem-solving, Stakeholder Management, Business Stratigy, Business Intelligence
                             </li>
                         </ul>
                     </div>
                     <div class="tab-contants" id="experience">
                         <ul>
-                            <li><span>Data Engineer</span>
+                            <li><span>Electrical Engineer (Projects & Grid Analytics) </span>
                                 <br>WBSETCL<br>
                                 July 2024 – Present <br>
                             </li>
-                            <li><span>Data Analyst (Intern)</span>
-                                <br>InnoByte Services, new Delhi<br>
-                                July 2025 – October 2025 <br>
+                            <li><span>Executive Electrical Engineer </span>
+                                <br>Synnat Pharma Pvt Ltd | Visakhapatnam, India<br>
+                                Mar 2023 – May 2024 <br>
                             </li>
-                            <li><span>Software developer and Data Analyst</span>
-                                <br>Zidio Development Ltd, Bangalore<br>
-                                March 2024 – Sept 2024 <br>
+                            <li><span>Junior Electrical Engineer</span>
+                                <br>ABCI Infrastructures Pvt. Ltd. | Assam, India<br>
+                                Feb 2020 – Jan 2023 <br>
                             </li>
+••• Intern and Training •••
+                            <li><span>Data Analyst (Intern - Remote)</span>
+                                <br>InnoByte Services | New Delhi<br>
+                                May 2024 – July 2024 <br>
+                            </li>
+                            <li><span>Software developer and Data Analyst (Intern)</span>
+                                <br>Zidio Development Ltd | Bangalore<br>
+                                Jan 2023 – Mar 2023 <br>
+                            </li>
+                            <li><span>Industrial Training</span>
+                                <br>Durgapur Projects Ltd<br>
+                                550Mw Steam Power Plant Unit-IV and A-B Zone Substation <br>
+                            </li>
+
                             <li><span></span><br></li>
                         </ul>
                     </div>
                     <div class="tab-contants" id="education">
                         <ul>
-                            <li><span>Engineering ~ 2023</span><br>
+                            <li><span>Bachelor's Degree in Engineering and Technology ~ 2023</span><br>
                                 Bengal Institute of Technology and Management (BITM),India<br>
                                 Bachelor of Technology in Electrical Engineering<br>
-                                CGPA 9.17 <br></li>
+                                CGPA 9.17/10 <br></li>
+                            <li><span>Diploma in Engineering ~ 2019</span><br>
+                                Nibedita Polytechnic,India<br>
+                                Diploma of Technology in Electrical Engineering<br>
+                                CGPA 8.50/10 <br></li>
                         </ul>
                     </div>
                     <div class="tab-contants" id="certification">
                         <ul>
-                            <li><span>Google Data Analytics Profational Certifications</span>
+                            <li><span>Google Data Analytics</span>
                                 <br>Coursera<br>
                             </li>
                             <li><span>Google Advance Data Analytics Certifications</span>
                                 <br>Coursera<br>
                             </li>
-                            <li><span>IBM Data Analyst Certification</span>
+                            <li><span>IBM Data Science Professional certification</span>
                                 <br>Coursera<br>
                             </li>
-                            <li><span>Python A to Z</span>
+                            <li><span>Business Analysis - (IIBA – ECBA, CPBA)</span>
                                 <br>Udemy<br>
+                            </li>
+                            <li><span>Project Management (Agile) – Microsoft/Google</span>
+                                <br>Coursera<br>
                             </li>
                             <li><span>AI & Machine Learning</span>
                                 <br>Andrew Ng - Deeplearning Ai<br>
@@ -150,16 +184,8 @@
                     <a href="#services">Learn more</a>
                 </div>
                 <div>
-                    <i class="fa-brands fa-uncharted"></i>
-                    <h2>Cyber Security Analyst</h2>
-                    <p>
-                        Helping organizations stay secure with comprehensive cyber threat analysis, system audits, and proactive defense strategies.
-                    </p>
-                    <a href="#services">Learn more</a>
-                </div>
-                <div>
                     <i class="fa-solid fa-crop-simple"></i>
-                    <h2>AI Engineer & Software Development</h2>
+                    <h2>Project Management</h2>
                     <p>
                         Offering innovative engineering solutions with a focus on technical design, system optimization, and project development.
                     </p>
@@ -167,9 +193,17 @@
                 </div>
                 <div>
                     <i class="fa-brands fa-app-store"></i>
-                    <h2>Graphics Design</h2>
+                    <h2>Engineering Design</h2>
                     <p>
                         Providing Design according business needed UI/UX, Ad, Flex, Printmedia, Banner etc.
+                    </p>
+                    <a href="#services">Learn more</a>
+                </div>
+                <div>
+                    <i class="fa-brands fa-app-store"></i>
+                    <h2>Project Control</h2>
+                    <p>
+                        •••
                     </p>
                     <a href="#services">Learn more</a>
                 </div>
@@ -216,21 +250,13 @@
                 <div class="contact-left">
                     <h1 class="sub-title">Contact Me</h1>
                     <p><i class="fa-solid fa-envelope"></i> sutradhartapashapd@gmail.com </p>
-                    <p><i class="fa-solid fa-square-phone"></i> +1 101 001 1010  </p>
+                    <p><i class="fa-solid fa-square-phone"></i> •••  </p>
                     <div class="social-icon">
                         <a href="https://in.linkedin.com/in/tapashsutradhar/" target="_blank"><i class="fab fa-linkedin"></i></a>
                         <a href="https://github.com/tapashsutradhar" target="_blank"><i class="fab fa-github"></i></a>
                         <a href="https://twitter.com/im_Tapash" target="_blank"><i class="fab fa-twitter-square"></i></a>
                         <a href="https://medium.com/@itapashsutradhar" target="_blank"><i class="fab fa-medium"></i></a>
                         <a href="https://www.youtube.com/@imtapashsutradhar" target="_blank"><i class="fab fa-youtube"></i></a>
-
-<!-----------
-                        <a href="https://www.behance.net/itapashsutradhar" target="_blank"><i class="fab fa-behance"></i></a>
-                        <a href="https://dribbble.com/tapashsutradhar" target="_blank"><i class="fab fa-square-dribbble"></i></a>
-                        <a href="https://www.instagram.com/imtapashsutradhar/" target="_blank"><i class="fab fa-square-instagram"></i></a>
-                        <a href="https://www.facebook.com/itapashsutradhar" target="_blank"><i class="fab fa-facebook"></i></a>
-                        <a href="http://youtube.com/@imtapashsutradhar" target="_blank"><i class="fab fa-youtube"></i></a>
-                        ------------>
                     </div>
                     <!------------------CV File----------------------->
                     <a href="assets/Tapash Sutradhar.pdf" download class="btn btn2">Download CV</a>
